# STOCK-ANALYSIS

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: signal_model.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  market_data.py  router.py  trading.py
backend/app/core/: config.py  rate_limit.py  security.py
backend/app/models/: audit_log.py  user.py
backend/app/risk/: engine.py
backend/app/schemas/: auth.py  market_data.py
backend/app/services/: auth_service.py  backtesting_service.py  market_data_service.py
backend/app/strategies/: base.py  ema.py
backend/tests/: test_auth_api.py  test_risk.py  test_strategy.py
docs/: roadmap.md
frontend/: README.md
